--- a/package.json
+++ b/package.json
@@ -14,18 +14,22 @@
   },
   "scripts": {
     "test": "npm run tsc -- --noEmit && jest",
-    "tsc": "tsc"
+    "tsc": "tsc",
+    "migrate": "node -r ts-node/register/transpile-only ./src/migrations_test/config-migrations/migrator-cli.ts",
+    "dev": "nodemon src/infrastructure/api/server.ts"
   },
   "dependencies": {
     "@types/express": "^4.17.13",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "jstoxml": "^3.2.3",
-    "nodemon": "^2.0.15",
+    "minimist": "^1.2.8",
+    "nodemon": "^2.0.22",
     "reflect-metadata": "^0.1.13",
     "sequelize": "^6.17.0",
     "sequelize-typescript": "^2.1.3",
     "sqlite3": "^5.0.2",
+    "umzug": "^3.8.1",
     "uuid": "^8.3.2",
     "yup": "^0.32.11"
   }
