--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "typescript": "^4.5.5"
   },
   "scripts": {
-    "test": "npm run tsc -- --noEmit && jest",
+    "test": "npx jest",
     "tsc": "tsc",
     "migrate": "node -r ts-node/register/transpile-only ./src/migrations_test/config-migrations/migrator-cli.ts",
     "dev": "nodemon src/infrastructure/api/server.ts"
